<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mangekyo Reader</string>
    <string name="empty"></string>
    <string name="menu_settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Volumes">Volumes</string>
    <string name="Volume">Volume</string>
    <string name="Settings">Settings</string>
    <string name="Favorites">Favorites</string>
	<string name="Refresh_Images">Refresh Images</string>
	<string name="Refresh_Volumes">Refresh Volumes</string>
	<string name="Add_To_Favorites">Add To Favorites</string>
	<string name="Remove_From_Favorites">Remove From Favorites</string>
	<string name="Download_Volume">Download Volume</string>
	<string name="Downloading_">Downloading&#8230;</string>
	<string name="Loading_">Loading&#8230;</string>
	<string name="Search_Manga">Search Manga</string>
	<string name="List_is_empty">List is empty</string>
	<string name="View_volume">View volume</string>
	<string name="View_Manga">View Manga</string>
	<string name="Network_Error">Network Error</string>
	<string name="Download_All">Download All</string>
	<string name="Manga_Sources">Manga Sources</string>
	<string name="Version">Version</string>
	<string name="About_Software">About Software</string>
	<string name="shortly_about_application">shortly about application</string>
	<string name="About">About</string>
	<string name="Mark_as_read">Mark as read</string>
	<string name="Mark_as_unread">Mark as unread</string>
	<string name="ImageTooLarge">Image too large, sorry, there is no enough memory to display it.</string>
	<string name="Next">&gt;&gt;</string>
	<string name="Previous">&lt;&lt;</string>
	<string name="ReadAgain">Read Again</string>
</resources>